--- a/demoroot/notebooks/04 Data Access.ipynb
+++ b/demoroot/notebooks/04 Data Access.ipynb
@@ -925,7 +925,19 @@
    "id": "f7679972",
    "metadata": {},
    "source": [
-    "## (WIP) Data Visualization with Maps (OGC API Maps)"
+    "## Data Visualization with Maps (OGC API Maps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e21d188",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = \"sentinel-2-l2a-render\"\n",
+    "response = requests.get(f\"{PROTECTED_STAC_API_URL}/collections/{collection}\")\n",
+    "response.json()[\"renders\"]"
    ]
   },
   {
@@ -940,7 +952,6 @@
     "from PIL import Image\n",
     "from IPython.display import display\n",
     "import io\n",
-    "collection = \"sentinel-2-l2a-render\"\n",
     "params = {\n",
     "    \"bbox\": \"-22,64,-21.7,64.3\",\n",
     "    \"datetime\": \"2023-10-31T00:00:00Z/2023-10-31T23:59:59Z\",\n",
