Update CWL, ZOO-Project-DRU and IAM-BB URLs

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"develop.eoepca.org\""
+    "base_domain = \"apx.develop.eoepca.org\""
    ]
   },
   {
@@ -70,13 +70,18 @@
     "#-------------------------------------------------------------------------------\n",
     "# Helper function to authenticate user and get access token\n",
     "#-------------------------------------------------------------------------------\n",
+    "\n",
     "import requests\n",
     "\n",
-    "realm = \"master\"\n",
-    "keycloak = f\"https://keycloak-v1x.{base_domain}\"\n",
-    "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
-    "client_id = \"admin-cli\"\n",
-    "client_secret = \"changeme\"\n",
+    "realm = \"eoepca\"\n",
+    "keycloak_endpoint = f\"https://iam-auth.{base_domain}\"\n",
+    "workspace_api_endpoint = f'https://workspace-api.{base_domain}/workspaces'\n",
+    "token_endpoint = f\"{keycloak_endpoint}/realms/{realm}/protocol/openid-connect/token\"\n",
+    "minio_endpoint = \"https://minio.develop.eoepca.org\"\n",
+    "#client_id = \"admin-cli\"\n",
+    "#client_secret = \"admin-cli\"\n",
+    "client_id = \"demo\"\n",
+    "client_secret = \"demo\"\n",
     "\n",
     "def get_user_token(username, password):\n",
     "    headers = {\n",
@@ -440,7 +445,7 @@
     "    headers = dict([(\"Content-Type\", \"application/json\")], **headers),\n",
     "    json = {\n",
     "      \"executionUnit\": {\n",
-    "        \"href\": \"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/deploy/samples/requests/processing/convert-url-app.cwl\",\n",
+    "        \"href\": \"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/scripts/processing/oapip/examples/convert-url-app.cwl\",\n",
     "        \"type\": \"application/cwl\"\n",
     "      }\n",
     "    }\n",
