Comment workspace-api parts which are not functioning at the moment
Add example of deploying an Application Package using the CWL encoding

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -207,12 +207,12 @@
     "# Init S3 session for Creodias\n",
     "S3_ENDPOINT = f\"https://minio.{base_domain}\"\n",
     "session = boto3.session.Session()\n",
-    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "#s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "\n",
     "# List bucket contents\n",
-    "bucket = s3resource.Bucket(bucket_name)\n",
-    "for obj in bucket.objects.all():\n",
-    "    print(' ->', obj.key)"
+    "#bucket = s3resource.Bucket(bucket_name)\n",
+    "#for obj in bucket.objects.all():\n",
+    "#    print(' ->', obj.key)"
    ]
   },
   {
@@ -231,13 +231,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
-    "result = object.put(Body=open('../data/s-expression-cwl.cwl', 'rb'))\n",
-    "res = result.get('ResponseMetadata')\n",
-    "if res.get('HTTPStatusCode') == 200:\n",
-    "    print('Application package uploaded successfully')\n",
-    "else:\n",
-    "    print('Application package not uploaded')"
+    "#object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
+    "#result = object.put(Body=open('../data/s-expression-cwl.cwl', 'rb'))\n",
+    "#res = result.get('ResponseMetadata')\n",
+    "#if res.get('HTTPStatusCode') == 200:\n",
+    "#    print('Application package uploaded successfully')\n",
+    "#else:\n",
+    "#    print('Application package not uploaded')"
    ]
   },
   {
@@ -255,17 +255,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "application_url = f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
-    "response = requests.post(\n",
-    "    f\"{workspace_url}/workspaces/{workspace_name}/register\",\n",
-    "    headers = dict([(\"Content-Type\", \"application/json\")], **headers),\n",
-    "    json= {\n",
-    "        \"type\": \"application\",\n",
-    "        \"url\": application_url,\n",
-    "    }\n",
-    ")\n",
-    "response.raise_for_status()\n",
-    "response"
+    "#application_url = f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
+    "#response = requests.post(\n",
+    "#    f\"{workspace_url}/workspaces/{workspace_name}/register\",\n",
+    "#    headers = dict([(\"Content-Type\", \"application/json\")], **headers),\n",
+    "#    json= {\n",
+    "#        \"type\": \"application\",\n",
+    "#        \"url\": application_url,\n",
+    "#    }\n",
+    "#)\n",
+    "#response.raise_for_status()\n",
+    "#response"
    ]
   },
   {
@@ -287,15 +287,15 @@
     "workspace_endpoint = f'https://resource-catalogue.{workspace_name}.{base_domain}/csw'\n",
     "print(f\"{USER_NAME}'s workspace (catalogue): {workspace_endpoint}\")\n",
     "\n",
-    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30,headers=headers)\n",
-    "csw.getrecords2(maxrecords=10)\n",
+    "#csw = CatalogueServiceWeb(workspace_endpoint,timeout=30,headers=headers)\n",
+    "#csw.getrecords2(maxrecords=10)\n",
     "\n",
-    "print(f\"{USER_NAME}'s workspace records:\\n\")\n",
-    "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
+    "#print(f\"{USER_NAME}'s workspace records:\\n\")\n",
+    "#for rec in csw.records:\n",
+    "#    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
     "\n",
-    "    print(f\"URLs for Application {app_id}:\")\n",
-    "csw.records[app_id].references"
+    "#    print(f\"URLs for Application {app_id}:\")\n",
+    "#csw.records[app_id].references"
    ]
   },
   {
@@ -429,7 +429,50 @@
     "**POST {service_url}/processes**<br>\n",
     "Deploys application to the ADES.<br>\n",
     "Request body is json in which the input is the Application Package describing the application.<br>\n",
-    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/atom+xml_** or **_application/cwl_**. The url to the application package can be either a http or s3 endpoint."
+    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/atom+xml_** or **_application/cwl_**. The url to the application package can be either a http or s3 endpoint.\n",
+    "\n",
+    "**Please use one of the following option bellow**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a1c2e37",
+   "metadata": {},
+   "source": [
+    "##### Option A: sending the CWL\n",
+    "\n",
+    "Using the CWL as request body posted to the `/processes` path."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7073c40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Deploy Application\n",
+    "response = requests.get(\"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/scripts/processing/oapip/examples/convert-url-app.cwl\")\n",
+    "response = requests.post(\n",
+    "    f\"{ades_proc_url}/processes\",\n",
+    "    headers = dict([(\"Content-Type\", \"application/cwl\")], **headers),\n",
+    "    data = response.text\n",
+    ")\n",
+    "if response.status_code == 409:\n",
+    "    print(f\"Application {app_name} is already deployed\")\n",
+    "else:\n",
+    "    response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2fa483f",
+   "metadata": {},
+   "source": [
+    "##### Option B\n",
+    "\n",
+    "Passing the CWL by reference encapsulated within an OGC Application Package encoding (conform with the following schema: )."
    ]
   },
   {
@@ -455,6 +498,16 @@
     "else:\n",
     "    response.raise_for_status()\n",
     "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e133bc69",
+   "metadata": {},
+   "source": [
+    "#### Fetch the response \n",
+    "\n",
+    "Whatever is the way you deployed the Process, using the CWL or OGC Application Package encoding, the following should return the exact same result."
    ]
   },
   {
