Update section naming and uncomment working parts of the workspace-api

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -78,6 +78,7 @@
     "workspace_api_endpoint = f'https://workspace-api.{base_domain}/workspaces'\n",
     "token_endpoint = f\"{keycloak_endpoint}/realms/{realm}/protocol/openid-connect/token\"\n",
     "minio_endpoint = \"https://minio.develop.eoepca.org\"\n",
+    "\n",
     "#client_id = \"admin-cli\"\n",
     "#client_secret = \"admin-cli\"\n",
     "client_id = \"demo\"\n",
@@ -191,7 +192,8 @@
     "# Bucket details\n",
     "bucket_name = workspace_details[\"storage\"][\"credentials\"][\"bucketname\"]\n",
     "s3_access = workspace_details[\"storage\"][\"credentials\"][\"access\"]\n",
-    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]"
+    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]\n",
+    "S3_ENDPOINT = workspace_details[\"storage\"][\"credentials\"][\"endpoint\"]"
    ]
   },
   {
@@ -205,14 +207,14 @@
     "import boto3\n",
     "\n",
     "# Init S3 session for Creodias\n",
-    "S3_ENDPOINT = f\"https://minio.{base_domain}\"\n",
+    "#S3_ENDPOINT = f\"https://minio.{base_domain}\"\n",
     "session = boto3.session.Session()\n",
-    "#s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "\n",
     "# List bucket contents\n",
-    "#bucket = s3resource.Bucket(bucket_name)\n",
-    "#for obj in bucket.objects.all():\n",
-    "#    print(' ->', obj.key)"
+    "bucket = s3resource.Bucket(bucket_name)\n",
+    "for obj in bucket.objects.all():\n",
+    "    print(' ->', obj.key)"
    ]
   },
   {
@@ -231,13 +233,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
-    "#result = object.put(Body=open('../data/s-expression-cwl.cwl', 'rb'))\n",
-    "#res = result.get('ResponseMetadata')\n",
-    "#if res.get('HTTPStatusCode') == 200:\n",
-    "#    print('Application package uploaded successfully')\n",
-    "#else:\n",
-    "#    print('Application package not uploaded')"
+    "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
+    "result = object.put(Body=open('../data/s-expression-cwl.cwl', 'rb'))\n",
+    "res = result.get('ResponseMetadata')\n",
+    "if res.get('HTTPStatusCode') == 200:\n",
+    "    print('Application package uploaded successfully')\n",
+    "else:\n",
+    "    print('Application package not uploaded')"
    ]
   },
   {
@@ -303,8 +305,8 @@
    "id": "swiss-librarian",
    "metadata": {},
    "source": [
-    "## ADES\n",
-    "The ADES provides user-specific endpoints, using a URL path prefix."
+    "## ZOO-Project-DRU\n",
+    "The ZOO-Project-DRU provides user-specific endpoints, using a URL path prefix."
    ]
   },
   {
@@ -325,7 +327,7 @@
    "id": "different-studio",
    "metadata": {},
    "source": [
-    "### ADES API Processes"
+    "### ZOO-Project-DRU API Processes"
    ]
   },
   {
@@ -343,7 +345,7 @@
    "id": "framed-russell",
    "metadata": {},
    "source": [
-    "#### ADES: List Processes\n",
+    "#### ZOO-Project-DRU: List Processes\n",
     "**GET {service_url}/processes**<br>\n",
     "Provides a list of all processes "
    ]
@@ -376,7 +378,7 @@
     "tags": []
    },
    "source": [
-    "#### ADES: Undeploy Application (in case its already deployed)\n",
+    "#### ZOO-Project: Undeploy Application (in case its already deployed)\n",
     "**DELETE {service_url}/processes/{application_name}**<br>\n",
     "Undeploys application from the ADES"
    ]
@@ -424,12 +426,12 @@
    "id": "aggregate-scratch",
    "metadata": {},
    "source": [
-    "#### ADES: Deploy Application\n",
+    "#### ZOO-Project-DRU: Deploy Application\n",
     "\n",
     "**POST {service_url}/processes**<br>\n",
-    "Deploys application to the ADES.<br>\n",
+    "Deploys application to the ZOO-Project-DRU.<br>\n",
     "Request body is json in which the input is the Application Package describing the application.<br>\n",
-    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/atom+xml_** or **_application/cwl_**. The url to the application package can be either a http or s3 endpoint.\n",
+    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/cwl+yaml_** or **_application/cwl_**. *The url to the application package can be either a http or s3 endpoint.*\n",
     "\n",
     "**Please use one of the following option bellow**"
    ]
@@ -441,7 +443,7 @@
    "source": [
     "##### Option A: sending the CWL\n",
     "\n",
-    "Using the CWL as request body posted to the `/processes` path."
+    "Using the CWL as request body posted to the `/processes` path.\n"
    ]
   },
   {
@@ -452,11 +454,11 @@
    "outputs": [],
    "source": [
     "# API Processes - Deploy Application\n",
-    "response = requests.get(\"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/scripts/processing/oapip/examples/convert-url-app.cwl\")\n",
+    "app_pkg = requests.get(\"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/scripts/processing/oapip/examples/convert-url-app.cwl\")\n",
     "response = requests.post(\n",
     "    f\"{ades_proc_url}/processes\",\n",
     "    headers = dict([(\"Content-Type\", \"application/cwl\")], **headers),\n",
-    "    data = response.text\n",
+    "    data = app_pkg.text\n",
     ")\n",
     "if response.status_code == 409:\n",
     "    print(f\"Application {app_name} is already deployed\")\n",
@@ -550,7 +552,7 @@
    "id": "intimate-douglas",
    "metadata": {},
    "source": [
-    "#### ADES: Get Application Details\n",
+    "#### ZOO-Project-DRU: Get Application Details\n",
     "**GET {service_url}/processes/{application_name}**<br>\n",
     "Provides details of the deployed application<br>\n",
     "The response includes the API Processes json application description."
@@ -575,7 +577,7 @@
    "id": "fourth-decline",
    "metadata": {},
    "source": [
-    "#### ADES: Execute Application\n",
+    "#### ZOO-Project-DRU: Execute Application\n",
     "\n",
     "**POST {service_url}/processes/{application_name}/execution**<br>\n",
     "Request body is json as defined by API Processes to define the inputs and outputs, consistent with the CWL Workflow application package.<br>\n",
@@ -622,7 +624,7 @@
    "id": "frozen-while",
    "metadata": {},
    "source": [
-    "#### ADES: Job Status\n",
+    "#### ZOO-Project-DRU: Job Status\n",
     "\n",
     "**GET {service_url}/jobs/{job_id}**<br>\n",
     "Checks the status of the previously submitted job - using the URL returned in the Location header of the execute request.<br>\n",
@@ -700,7 +702,7 @@
    "id": "suitable-construction",
    "metadata": {},
    "source": [
-    "#### ADES: Job Result\n",
+    "#### ZOO-Project-DRU: Job Result\n",
     "**GET {service_url}/jobs/{job_id}/results**<br>\n",
     "Returns details of the outputs for a successful job execution.<br>\n",
     "The response body provides json data that includes the reference to the STAC file that indexes the processing outputs."
@@ -754,7 +756,10 @@
     "tags": []
    },
    "source": [
-    "#### ADES: List Jobs"
+    "#### ZOO-Project-DRU: List Jobs\n",
+    "\n",
+    "**GET {service_url}/jobs**<br>\n",
+    "List available processes from ZOO-Project-DRU."
    ]
   },
   {
@@ -781,7 +786,7 @@
     "tags": []
    },
    "source": [
-    "#### ADES: Undeploy Application\n",
+    "#### ZOO-Project-DRU: Undeploy Application\n",
     "**DELETE {service_url}/processes/{application_name}**<br>\n",
     "Undeploys application from the ADES"
    ]
