Update Registration API parameters

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -87,7 +87,9 @@
   {
    "cell_type": "markdown",
    "id": "a86c43c6-0b46-4c55-8baa-f1d0da46c2c6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### System Catalogue Discovery"
    ]
@@ -640,7 +642,9 @@
   {
    "cell_type": "markdown",
    "id": "0a2b6c8b-655a-495c-897f-4f876d6d400d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### System Catalogue Discovery through Federated Search"
    ]
@@ -734,7 +738,9 @@
   {
    "cell_type": "markdown",
    "id": "f3828753-519d-4153-b8ed-61b95d569cc0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Workspace catalogue"
    ]
@@ -1048,7 +1054,9 @@
   {
    "cell_type": "markdown",
    "id": "d25d53cf-efb4-4f8e-acf0-14ac63d0de00",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### OpenSearch"
    ]
@@ -1406,7 +1414,9 @@
   {
    "cell_type": "markdown",
    "id": "71406579-3e11-41a0-99d0-f92d137d75b6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### OGC API Records demo"
    ]
@@ -1743,7 +1753,9 @@
   {
    "cell_type": "markdown",
    "id": "b7999ab0-acc9-4246-b4c6-87588748f972",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Registration API demo"
    ]
@@ -1886,7 +1898,9 @@
   {
    "cell_type": "markdown",
    "id": "a45cbf68-b327-4895-b208-04acf893ca9c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Registration API v2 demo"
    ]
@@ -1932,11 +1946,16 @@
     "response = requests.post(\n",
     "    f\"{registration_endpoint}/processes/register/execution\",\n",
     "    json={\n",
-    "        \"inputs\": {\n",
-    "            \"type\": \"item\",\n",
-    "            \"source\": \"https://raw.githubusercontent.com/stac-utils/stac-examples/refs/heads/main/sentinel2/sentinel2-sample.json\",\n",
-    "            \"target\": \"https://resource-catalogue.develop.eoepca.org\"\n",
+    "      \"inputs\": {\n",
+    "        \"source\": {\n",
+    "          \"href\": \"https://raw.githubusercontent.com/stac-utils/stac-examples/refs/heads/main/sentinel2/sentinel2-sample.json\",\n",
+    "          \"rel\": \"item\"\n",
+    "        },\n",
+    "        \"target\": {\n",
+    "          \"href\": \"https://resource-catalogue.develop.eoepca.org\",\n",
+    "          \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
     "        }\n",
+    "      }\n",
     "    }\n",
     ")\n",
     "response.raise_for_status()\n",
@@ -1984,7 +2003,12 @@
     "    json={\n",
     "        \"inputs\": {\n",
     "            \"id\": \"S2A_OPER_MSI_L2A_TL_SGS__20180524T190423_A015250_T26SKD_N02.08\",\n",
-    "            \"target\": \"https://resource-catalogue.develop.eoepca.org\"\n",
+    "            \"collection\": \"metadata:main\",\n",
+    "            \"rel\": \"item\",\n",
+    "            \"target\": {\n",
+    "                \"href\": \"https://resource-catalogue.develop.eoepca.org\",\n",
+    "                \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
+    "            }\n",
     "        }\n",
     "    }\n",
     ")\n",
@@ -2250,7 +2274,9 @@
   {
    "cell_type": "markdown",
    "id": "d71eb629-31ca-436a-8557-548cca3b8e1a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### OGC API Records Transactions demo"
    ]
@@ -2615,7 +2641,9 @@
   {
    "cell_type": "markdown",
    "id": "39b444fc-db2b-47d1-b1ec-4d3afc037ee2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### STAC API demo"
    ]
@@ -2893,7 +2921,9 @@
   {
    "cell_type": "markdown",
    "id": "55d5ac16-9e3a-44ca-97dc-e7859bb07147",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### STAC API Transactions demo"
    ]
@@ -3215,7 +3245,9 @@
   {
    "cell_type": "markdown",
    "id": "10bf1d4d-c52e-466e-832d-451cf3aac01d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### STAC API demo (eoAPI)"
    ]
@@ -3349,7 +3381,9 @@
   {
    "cell_type": "markdown",
    "id": "e678e6a8-0e6e-4067-b21f-b15fa9d32163",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### STAC Datacube demo"
    ]
@@ -3483,7 +3517,9 @@
   {
    "cell_type": "markdown",
    "id": "8024d488-6a53-4821-b491-7c33f2a1612c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### QGIS catalogue demo"
    ]
