Update resource registration notebook

--- a/demoroot/notebooks/06 Resource Registration Harvester.ipynb
+++ b/demoroot/notebooks/06 Resource Registration Harvester.ipynb
@@ -69,8 +69,7 @@
     "    print(\"No workflows deployed\")\n",
     "else:\n",
     "    for idx, deployment in enumerate(deployments, 1):\n",
-    "        print(\"%-2s %-25s deployed at: %-5s \" % (idx, deployment['name'], deployment['deploymentTime']))\n",
-    "        #print(f\"{idx} {deployment['name']} deployed at: {deployment['deploymentTime']}\")"
+    "        print(\"%-2s %-25s deployed at: %-30s with id: %s\" % (idx, deployment['name'], deployment['deploymentTime'], deployment[\"id\"]))"
    ]
   },
   {
@@ -125,6 +124,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4663dfdd",
+   "metadata": {},
+   "source": [
+    "Deploy the static STAC catalog workflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0d6334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bpmn = \"https://raw.githubusercontent.com/EOEPCA/registration-harvester/refs/heads/main/workflows//stac-publish.bpmn\"\n",
+    "bpmn_file = {os.path.basename(bpmn): requests.get(bpmn).text}\n",
+    "response = flowable_session.post(f\"{flowable_base_url}/service/repository/deployments\", files=bpmn_file)\n",
+    "print(f\"Sucessfully deployed workflow: {response.json()[\"url\"]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9a5ead12",
    "metadata": {},
    "source": [
@@ -138,11 +158,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for deployment in deployments:\n",
-    "    deployment_id = deployment['id']\n",
-    "    url = f\"{flowable_base_url}/service/repository/deployments/{deployment_id}\"\n",
-    "    response = flowable_session.delete(url)\n",
-    "    print(f\"Delete {deployment['name']} Status: {response.status_code}\")"
+    "deployment_id = \"d3b1f6dd-1057-11f0-bf7b-da6a9d930b18\"\n",
+    "url = f\"{flowable_base_url}/service/repository/deployments/{deployment_id}\"\n",
+    "response = flowable_session.delete(url)\n",
+    "print(f\"Delete {deployment['name']} Status: {response.status_code}\")"
    ]
   },
   {
@@ -173,7 +192,9 @@
     "        if process[\"name\"] == \"Landsat Workflow\":\n",
     "            landsat_process_id = process[\"id\"]\n",
     "        if process[\"name\"] == \"Sentinel Registration\":\n",
-    "            sentinel_process_id = process[\"id\"]        "
+    "            sentinel_process_id = process[\"id\"]\n",
+    "        if process[\"name\"] == \"STAC Publish\":\n",
+    "            stac_processId = process[\"id\"]"
    ]
   },
   {
@@ -333,6 +354,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "response = flowable_session.post(url=f\"{flowable_base_url}/service/runtime/process-instances\", json=body)\n",
+    "print(response.status_code)\n",
+    "print(f\"Created process instance at {response.json()[\"url\"]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86a21446",
+   "metadata": {},
+   "source": [
+    "### Execute workflow to harvest static STAC catalog\n",
+    "\n",
+    "This workflow is able to harvest a static STAC catalog represented by a set of JSON files.\n",
+    "\n",
+    "![Sentinel Workflow](img/stac-publish.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "933c7c95",
+   "metadata": {},
+   "source": [
+    "The path to the file which represents the catalog must be provided as input parameter when starting the workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84d1fdab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables = [\n",
+    "    {\"name\": \"stac_catalog_path\", \"type\": \"string\", \"value\": \"/worker/tests/data/example-catalog/catalog.json\"},\n",
+    "]\n",
+    "print(json.dumps(variables, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1134092b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create HTTP request to start the workflow\n",
+    "body = {}\n",
+    "body[\"processDefinitionId\"] = stac_processId\n",
+    "body[\"variables\"] = variables\n",
     "response = flowable_session.post(url=f\"{flowable_base_url}/service/runtime/process-instances\", json=body)\n",
     "print(response.status_code)\n",
     "print(f\"Created process instance at {response.json()[\"url\"]}\")"
