Update Registration API parameters

--- a/demoroot/notebooks/03 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/03 Resource Catalogue.ipynb
@@ -1977,7 +1977,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.sleep(3)\n",
+    "time.sleep(1)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/S2A_OPER_MSI_L2A_TL_SGS__20180524T190423_A015250_T26SKD_N02.08\", headers=dict(f=\"json\"))\n",
     "response.raise_for_status()\n",
     "response.json()"
@@ -2031,7 +2031,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.sleep(3)\n",
+    "time.sleep(1)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/S2A_OPER_MSI_L2A_TL_SGS__20180524T190423_A015250_T26SKD_N02.08\", headers=dict(f=\"json\"))\n",
     "response.raise_for_status()\n",
     "response.json()"
@@ -2052,130 +2052,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_str=\"\"\"\n",
-    "{\n",
+    "json_str={\n",
     "  \"inputs\": {\n",
     "    \"source\": {\n",
-    "      \"id\": \"worldcereal_inference\",\n",
-    "      \"type\": \"Feature\",\n",
-    "      \"conformsTo\": [\n",
-    "        \"http://www.opengis.net/spec/ogcapi-records-1/1.0/req/record-core\"\n",
-    "      ],\n",
-    "      \"geometry\": null,\n",
-    "      \"properties\": {\n",
-    "        \"created\": \"2024-05-17T00:00:00Z\",\n",
-    "        \"updated\": \"2024-05-17T00:00:00Z\",\n",
-    "        \"type\": \"process\",\n",
-    "        \"title\": \"ESA worldcereal global maize detector\",\n",
-    "        \"description\": \"A maize detection algorithm.\",\n",
-    "        \"cost_estimate\": 0.1,\n",
-    "        \"cost_unit\": \"platform credits per km²\",\n",
-    "        \"keywords\": [\n",
-    "          \"agriculture\",\n",
-    "          \"crops\",\n",
-    "          \"apex_algorithm\"\n",
-    "        ],\n",
-    "        \"language\": {\n",
-    "          \"code\": \"en-US\",\n",
-    "          \"name\": \"English (United States)\"\n",
-    "        },\n",
-    "        \"languages\": [\n",
-    "          {\n",
-    "            \"code\": \"en-US\",\n",
-    "            \"name\": \"English (United States)\"\n",
-    "          }\n",
-    "        ],\n",
-    "        \"contacts\": [\n",
-    "          {\n",
-    "            \"name\": \"Kristof Van Tricht\",\n",
-    "            \"position\": \"Researcher\",\n",
-    "            \"organization\": \"VITO\",\n",
-    "            \"links\": [\n",
+    "        \"content\": {\n",
+    "          \"id\": \"worldcereal_inference\",\n",
+    "          \"type\": \"Feature\",\n",
+    "          \"conformsTo\": [\n",
+    "            \"http://www.opengis.net/spec/ogcapi-records-1/1.0/req/record-core\"\n",
+    "          ],\n",
+    "          \"geometry\": None,\n",
+    "          \"properties\": {\n",
+    "            \"created\": \"2024-05-17T00:00:00Z\",\n",
+    "            \"updated\": \"2024-05-17T00:00:00Z\",\n",
+    "            \"type\": \"process\",\n",
+    "            \"title\": \"ESA worldcereal global maize detector\",\n",
+    "            \"description\": \"A maize detection algorithm.\",\n",
+    "            \"cost_estimate\": 0.1,\n",
+    "            \"cost_unit\": \"platform credits per km²\",\n",
+    "            \"keywords\": [\n",
+    "              \"agriculture\",\n",
+    "              \"crops\",\n",
+    "              \"apex_algorithm\"\n",
+    "            ],\n",
+    "            \"language\": {\n",
+    "              \"code\": \"en-US\",\n",
+    "              \"name\": \"English (United States)\"\n",
+    "            },\n",
+    "            \"languages\": [\n",
     "              {\n",
-    "                \"href\": \"https://www.vito.be/\",\n",
-    "                \"rel\": \"about\",\n",
-    "                \"type\": \"text/html\"\n",
-    "              },\n",
-    "              {\n",
-    "                \"href\": \"https://github.com/kvantricht\",\n",
-    "                \"rel\": \"about\",\n",
-    "                \"type\": \"text/html\"\n",
+    "                \"code\": \"en-US\",\n",
+    "                \"name\": \"English (United States)\"\n",
     "              }\n",
     "            ],\n",
-    "            \"contactInstructions\": \"Contact via VITO\",\n",
-    "            \"roles\": [\n",
-    "              \"principal investigator\"\n",
-    "            ]\n",
+    "            \"contacts\": [\n",
+    "              {\n",
+    "                \"name\": \"Kristof Van Tricht\",\n",
+    "                \"position\": \"Researcher\",\n",
+    "                \"organization\": \"VITO\",\n",
+    "                \"links\": [\n",
+    "                  {\n",
+    "                    \"href\": \"https://www.vito.be/\",\n",
+    "                    \"rel\": \"about\",\n",
+    "                    \"type\": \"text/html\"\n",
+    "                  },\n",
+    "                  {\n",
+    "                    \"href\": \"https://github.com/kvantricht\",\n",
+    "                    \"rel\": \"about\",\n",
+    "                    \"type\": \"text/html\"\n",
+    "                  }\n",
+    "                ],\n",
+    "                \"contactInstructions\": \"Contact via VITO\",\n",
+    "                \"roles\": [\n",
+    "                  \"principal investigator\"\n",
+    "                ]\n",
+    "              },\n",
+    "              {\n",
+    "                \"name\": \"VITO\",\n",
+    "                \"links\": [\n",
+    "                  {\n",
+    "                    \"href\": \"https://www.vito.be/\",\n",
+    "                    \"rel\": \"about\",\n",
+    "                    \"type\": \"text/html\"\n",
+    "                  }\n",
+    "                ],\n",
+    "                \"contactInstructions\": \"SEE WEBSITE\",\n",
+    "                \"roles\": [\n",
+    "                  \"processor\"\n",
+    "                ]\n",
+    "              }\n",
+    "            ],\n",
+    "            \"themes\": [\n",
+    "              {\n",
+    "                \"concepts\": [\n",
+    "                  {\n",
+    "                    \"id\": \"AGRICULTURE\"\n",
+    "                  },\n",
+    "                  {\n",
+    "                    \"id\": \"FIELD CROP PRODUCTS\"\n",
+    "                  }\n",
+    "                ],\n",
+    "                \"scheme\": \"https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/sciencekeywords\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"formats\": [\n",
+    "              {\n",
+    "                \"name\": \"GeoTiff\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"license\": \"other\"\n",
     "          },\n",
-    "          {\n",
-    "            \"name\": \"VITO\",\n",
-    "            \"links\": [\n",
-    "              {\n",
-    "                \"href\": \"https://www.vito.be/\",\n",
-    "                \"rel\": \"about\",\n",
-    "                \"type\": \"text/html\"\n",
-    "              }\n",
-    "            ],\n",
-    "            \"contactInstructions\": \"SEE WEBSITE\",\n",
-    "            \"roles\": [\n",
-    "              \"processor\"\n",
-    "            ]\n",
-    "          }\n",
-    "        ],\n",
-    "        \"themes\": [\n",
-    "          {\n",
-    "            \"concepts\": [\n",
-    "              {\n",
-    "                \"id\": \"AGRICULTURE\"\n",
-    "              },\n",
-    "              {\n",
-    "                \"id\": \"FIELD CROP PRODUCTS\"\n",
-    "              }\n",
-    "            ],\n",
-    "            \"scheme\": \"https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/sciencekeywords\"\n",
-    "          }\n",
-    "        ],\n",
-    "        \"formats\": [\n",
-    "          {\n",
-    "            \"name\": \"GeoTiff\"\n",
-    "          }\n",
-    "        ],\n",
-    "        \"license\": \"other\"\n",
-    "      },\n",
-    "      \"linkTemplates\": [],\n",
-    "      \"links\": [\n",
-    "        {\n",
-    "          \"rel\": \"openeo-process\",\n",
-    "          \"type\": \"application/json\",\n",
-    "          \"title\": \"openEO Process Definition\",\n",
-    "          \"href\": \"https://github.com/ESA-APEX/apex_algorithms/blob/main/openeo_udp/worldcereal_inference.json\"\n",
+    "          \"linkTemplates\": [],\n",
+    "          \"links\": [\n",
+    "            {\n",
+    "              \"rel\": \"openeo-process\",\n",
+    "              \"type\": \"application/json\",\n",
+    "              \"title\": \"openEO Process Definition\",\n",
+    "              \"href\": \"https://github.com/ESA-APEX/apex_algorithms/blob/main/openeo_udp/worldcereal_inference.json\"\n",
+    "            },\n",
+    "            {\n",
+    "              \"rel\": \"git\",\n",
+    "              \"type\": \"application/json\",\n",
+    "              \"title\": \"Git source repository\",\n",
+    "              \"href\": \"https://github.com/WorldCereal/worldcereal-classification.git\"\n",
+    "            },\n",
+    "            {\n",
+    "              \"rel\": \"service\",\n",
+    "              \"type\": \"application/json\",\n",
+    "              \"title\": \"CDSE openEO federation\",\n",
+    "              \"href\": \"https://openeofed.dataspace.copernicus.eu/\"\n",
+    "            },\n",
+    "            {\n",
+    "              \"rel\": \"license\",\n",
+    "              \"href\": \"https://apex.esa.int/license\"\n",
+    "            }\n",
+    "          ]\n",
     "        },\n",
-    "        {\n",
-    "          \"rel\": \"git\",\n",
-    "          \"type\": \"application/json\",\n",
-    "          \"title\": \"Git source repository\",\n",
-    "          \"href\": \"https://github.com/WorldCereal/worldcereal-classification.git\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"rel\": \"service\",\n",
-    "          \"type\": \"application/json\",\n",
-    "          \"title\": \"CDSE openEO federation\",\n",
-    "          \"href\": \"https://openeofed.dataspace.copernicus.eu/\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"rel\": \"license\",\n",
-    "          \"href\": \"https://apex.esa.int/license\"\n",
-    "        }\n",
-    "      ]\n",
+    "        \"rel\": \"item\"\n",
     "    },\n",
-    "    \"target\": \"https://resource-catalogue.develop.eoepca.org/\",\n",
-    "    \"type\": \"item\"\n",
+    "    \"target\": {\n",
+    "        \"href\": \"https://resource-catalogue.develop.eoepca.org/\",\n",
+    "        \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
+    "    }\n",
     "  }\n",
     "}\n",
-    "\"\"\"\n",
+    "\n",
     "response = requests.post(\n",
     "    f\"{registration_endpoint}/processes/register/execution\",\n",
-    "    json=json.loads(json_str)\n",
+    "    json=json_str\n",
     ")\n",
     "response.raise_for_status()\n",
     "response"
@@ -2216,7 +2220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#time.sleep(3)\n",
+    "time.sleep(1)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/worldcereal_inference\", headers=dict(f=\"json\"))\n",
     "response.raise_for_status()\n",
     "response.json()"
@@ -2242,7 +2246,11 @@
     "    json={\n",
     "        \"inputs\": {\n",
     "            \"id\": \"worldcereal_inference\",\n",
-    "            \"target\": \"https://resource-catalogue.develop.eoepca.org\"\n",
+    "            \"rel\": \"item\",\n",
+    "            \"target\": {\n",
+    "                \"href\": \"https://resource-catalogue.develop.eoepca.org\",\n",
+    "                \"rel\": \"http://www.opengis.net/spec/ogcapi-records-1/1.0\"\n",
+    "            }\n",
     "        }\n",
     "    }\n",
     ")\n",
@@ -2265,7 +2273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.sleep(3)\n",
+    "time.sleep(1)\n",
     "response = requests.get(f\"https://resource-catalogue.{base_domain}/stac/collections/metadata:main/items/worldcereal_inference\", headers=dict(f=\"json\"))\n",
     "response.raise_for_status()\n",
     "response.json()"
